# RuNES

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  log.txt  nes_pattern.pat
misc/: nes_pattern.hexpat
roms/: excitebike.nes  pacman.nes
src/: bus.rs  config.rs  cpu.rs  frame.rs  ines_parser.rs  joypad.rs  lib.rs  main.rs  sdl.rs
src/apu/: base_channel.rs  envelope.rs  frame_counter.rs  length_counter.rs  mixer.rs  mod.rs  pulse.rs  sweep.rs  triangle.rs
src/core/: bus.rs  console.rs  frame.rs  joypad.rs  mod.rs
src/cpu/: cpu.rs  mod.rs  op.rs  tracer.rs  traits.rs
src/frontend/: blip_buf.rs  egui.rs  mod.rs  sdl.rs
src/mappers/: cnrom.rs  mapper_0.rs  mmc1.rs  mod.rs  nrom.rs
src/ppu/: address.rs  control.rs  mod.rs
tests/: test.rs
tests/holy-mapperel/: M0_P32K_C8K_V.nes  M0_P32K_CR32K_V.nes  M0_P32K_CR8K_V.nes  M10_P128K_C64K_S8K.nes  M10_P128K_C64K_W8K.nes  M118_P128K_C64K.nes  M11_P64K_C64K_V.nes  M11_P64K_CR32K_V.nes  M180_P128K_CR8K_H.nes  M1_P128K_C128K.nes  M1_P128K_C128K_S8K.nes  M1_P128K_C128K_W8K.nes  M1_P128K_C32K.nes  M1_P128K_C32K_S8K.nes  M1_P128K_C32K_W8K.nes  M1_P128K_CR8K.nes  M1_P512K_CR8K_S32K.nes  M1_P512K_CR8K_S8K.nes  M28_P1M_CR32K.nes  M28_P512K_CR32K.nes  M2_P128K_CR8K_V.nes  M34_P128K_CR8K_H.nes  M3_P32K_C32K_H.nes  M4_P128K_CR32K.nes  M4_P128K_CR8K.nes  M4_P1M_CR32K.nes  M4_P256K_C256K.nes  M4_P256K_CR32K.nes  M66_P64K_C16K_V.nes  M69_P128K_C64K_S8K.nes  M69_P128K_C64K_W8K.nes  M78.3_P128K_C64K.nes  M78.3_P128K_CR32K.nes  M7_P128K_CR8K.nes  M9_P128K_C64K.nes
tests/nestest/: log.txt  main.rs
(+50 files in other folders)
