[package]
name = "nes"
version = "0.1.0"
test = true
autotests = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.2"
rand = "0.8.5"
sdl2 = "0.35.2"
itertools = "0.10.5"

[profile.release]
debug = true
