[package]
name = "nes"
version = "0.1.0"
autotests = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
sdl2 = "0.37.0"
itertools = "0.13.0"
config = "0.14.0"
eframe = { version = "0.24.1", features = ["wgpu"] }
bincode = "1.3.3"
cpal = "0.15.2"
crossbeam = "0.8.4"
image = "0.25.0"
rfd = "0.14.1"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
